force-app/main/default/objects/MS_Team_Attendance_Interval__c/MS_Team_Attendance_Interval__c.object-meta.xml
<CustomObject>
    <label>Teams Attendance Interval</label>
    <nameField>
        <displayFormat>TAI-{000000}</displayFormat>
        <label>Interval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Attendance Intervals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>