force-app/main/default/objects/MS_Team_Attendance_Interval__c/fields/Joined_At__c.field-meta.xml
<CustomField>
    <fullName>Joined_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Joined At</label>
    <type>DateTime</type>
</CustomField>