force-app/main/default/objects/MS_Team_Attendance_Interval__c/fields/Left_At__c.field-meta.xml
<CustomField>
    <fullName>Left_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Left At</label>
    <type>DateTime</type>
</CustomField>