force-app/main/default/objects/MS_Team_Attendance_Interval__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>MS_Team_Meeting_Participant__c</referenceTo>
    <relationshipLabel>Attendance Intervals</relationshipLabel>
    <relationshipName>Attendance_Intervals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>